--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,12 +13,12 @@ http {
         server_name _;  # Default server name for any hostname
 
         location / {
-            proxy_pass http://localhost:5000;  # Forward requests to localhost:5000
-            proxy_set_header Host $host;  # Preserve the original host header
-            proxy_set_header X-Real-IP $remote_addr;  # Preserve the real client IP
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # Preserve forwarded IPs
-            proxy_set_header X-Forwarded-Proto $scheme;  # Preserve the original protocol (HTTP or HTTPS)
-            proxy_redirect off;  # Disable automatic redirection if the proxied server redirects
+            # forward application requests to the gunicorn server
+            proxy_pass http://flask-app:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
         }
     }
 
