--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,11 @@
 services:
   proxy:
-    image: nginx
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro,z
+    image: localhost/nginx:latest
     ports:
-      - 8080:80
+      - 80:80
     networks:
       - local
+      - nat
     depends_on:
       - flask-app
     entrypoint: ["nginx", "-g", "daemon off;"]
@@ -15,7 +14,11 @@ services:
     image: localhost/flask-app:latest
     networks:
       - local
+      - nat
+
 networks:
   local:
     internal: true
     driver: ipvlan
+  nat:
+    driver: bridge
